--- a/html-forms/order.html
+++ b/html-forms/order.html
@@ -51,9 +51,12 @@
         <br>
 
         When should we deliver?
-        <input type="radio" name="time" value="am">Morning
-        <input type="radio" name="time" value="pm">Evening
-        <input type="radio" name="time" value="any">Any time
+        <input type="radio" id="morning" name="time" value="am">
+        <label for="morning">Morning</label>
+        <input type="radio" id="evening" name="time" value="pm">
+        <label for="evening">Evening</label>
+        <input type="radio" id="any" name="time" value="any">
+        <label for="any">Any</label>
 
         <p>Enter your message:</p>
         <textarea name="message" rows="5" cols="25"></textarea><br>
